--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 <script>
 	$( document ).ready(function() {
 
-
-		socialFeed('.feed', '1923533651209150|62ff7a6d17a67672b5d77d82ea375e5d', 'axialus');
+		//socialFeed('target div', 'api keys', 'fb profile');
+		socialFeed('.feed', '1923533651209150|62ff7a6d17a67672b5d77d82ea375e5d', 'cocacolapoland');
 		kolejnosc();
 
 
